feat(frontend): Login + Create Account + Settings
