# src/main/java/com/dorvak/das/dto/LoginDto.java
@@ -1,4 +1,4 @@
 package com.dorvak.das.dto;
 
-public record LoginDto(String username, String password, String email) {
+public record LoginDto(String username, String password, String email, String language, String oldPassword) {
 }
